--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -16,8 +16,9 @@
     </string>
     <string name="title_activity_user_login">Sign in</string>
     <!--Following strings are for Connectivity-->
-    <string name="url">http://10.0.0.3:8090/InsecurePayServiceServer/rest/</string>
+    <string name="url">/InsecurePayServiceServer/rest/</string>
     <string name="no_network">No network connection</string>
     <!--Following strings are for Login-->
     <string name="login_path">login</string>
+    <string name="prompt_serveraddr">Enter Server Address</string>
 </resources>
