--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="login_path">login</string>
     <string name="prompt_serveraddr">Enter Server Address</string>
     <string name="account_lockoutduration">60000</string>
+    <string name="title_activity_home_page">HomePage</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
