--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="menu_change_url">Change Server Address</string>
+    <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
 </resources>
