Removed mServerAddressView, replaced with default_url_address. Removed last of the crap files.

--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     </string>
     <string name="title_activity_user_login">Sign in</string>
     <!--Following strings are for Connectivity-->
-    <string name="defaultUrlAddress">http://10.0.0.3:8090/InsecurePayServiceServer/rest/</string>
+    <string name="default_url_address">http://10.0.0.3:8090/InsecurePayServiceServer/rest/</string>
     <string name="no_network">No network connection</string>
     <!--Following strings are for Login-->
     <string name="login_path">login</string>
