--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -22,15 +22,19 @@
     <string name="no_network">No network connection</string>
     <!--Following strings are for Login-->
     <string name="login_path">login</string>
-    <string name="custDetails_path">custService</string>
-    <string name="prompt_serveraddr">Enter Server Address</string>
-    <string name="account_lockoutduration">60000</string>
+    <string name="cust_details_path">custService</string>
+    <string name="prompt_server_addr">Enter Server Address</string>
+    <string name="account_lockout_duration">60000</string>
     <string name="title_activity_home_page">HomePage</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="login_failed_account_locked">Login Failed and Account Locked</string>
+    <string name="login_failed_still_account_locked">Login Failed and Account still Locked</string>
+    <string name="login_failed">Login Failed</string>
+    <string name="login_successful">Login Successful</string>
     <string name="menu_change_url">Change Server Address</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
+    <string name="username">username</string>
 </resources>
