--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     </string>
     <string name="title_activity_user_login">Sign in</string>
     <!--Following strings are for Connectivity-->
-    <string name="defaultAddress">http://10.0.0.3</string>
+    <string name="defaultAddress">http://10.0.0.30</string>
     <string name="defaultPort">8090</string>
     <string name="defaultPath">/InsecurePayServiceServer/rest/</string>
     <string name="no_network">No network connection</string>
@@ -34,7 +34,9 @@
     <string name="login_failed">Login Failed</string>
     <string name="login_successful">Login Successful</string>
     <string name="menu_change_url">Change Server Address</string>
+    <string name="forgot_password">Forgot Password?</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
     <string name="username">username</string>
+    <string name="title_activity_forgot_password">ForgotPassword</string>
 </resources>
