--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
     <string name="username">username</string>
+    <string name="send">SEND</string>
     <string name="title_activity_forgot_password">ForgotPassword</string>
 </resources>
