--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -17,9 +17,8 @@
     </string>
     <string name="title_activity_user_login">Sign in</string>
     <!--Following strings are for Connectivity-->
-    <string name="defaultAddress">http://10.0.0.30</string>
-    <string name="defaultPort">8090</string>
-    <string name="defaultPath">/InsecurePayServiceServer/rest/</string>
+    <string name="defaultAddress">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
+    <string name="defaultPath">/rest/</string>
     <string name="no_network">No network connection</string>
     <!--Following strings are for Login-->
     <string name="login_path">login</string>
@@ -39,6 +38,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
     <string name="username">username</string>
+    <string name="password">password</string>
+    <string name="url">URL</string>
+    <string name="path">Path</string>
     <string name="send">SEND</string>
     <string name="title_activity_forgot_password">ForgotPassword</string>
 </resources>
