--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -48,6 +48,11 @@
     <string name="information_mismatch">Please verify your information and try again.</string>
     <string name="default_password_linksent">Your password has been reset.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--For Navigation Drawer Toolbar titles-->
+    <string name="nav_homepage">Home</string>
+    <string name="nav_account_manage">Account Management</string>
+    <string name="nav_transfer_funds">Transfer Funds</string>
+    <string name="nav_interest_calc">Interest Calculator</string>
+    <string name="nav_support_chat">Support Chat</string>
+
 </resources>
