--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
 
     <!--For Account Management Fragment-->
     <string name="tvAccount_accountNumber">Account Number</string>
-    <string name="tvAccount_userName">User Name</string>
+    <string name="tvAccount_userDOB">Date of Birth</string>
     <string name="tvAccount_name">Name</string>
     <string name="tvAccount_ssn">Social Security</string>
     <string name="tvAccount_email">Email Address</string>
