--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     </string>
     <string name="title_activity_user_login">Sign in</string>
     <!--Following strings are for Connectivity-->
-    <!--<string name="defaultAddress">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>-->
-    <string name="defaultAddress">http://10.0.0.15:8090/InsecurePayServiceServer</string>
+    <string name="defaultAddress">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
+    <!--<string name="defaultAddress">http://10.0.0.3:8090/InsecurePayServiceServer</string>-->
     <string name="defaultPath">/rest/</string>
     <string name="no_network">No network connection</string>
     <!--Following strings are for Login-->
@@ -47,6 +47,7 @@
     <string name="title_activity_forgot_password">ForgotPassword</string>
     <string name="information_mismatch">Please verify your information and try again.</string>
     <string name="default_password_linksent">Your password has been reset.</string>
+    <string name="common_VO">commonVO</string>
 
     <!--For Navigation Drawer Toolbar titles-->
     <string name="nav_homepage">Home</string>
@@ -63,7 +64,7 @@
     <string name="tvAccount_email">Email Address</string>
     <string name="tvAccount_phoneNumber">Phone Number</string>
     <string name="tvAccount_address">Address</string>
-    <string name="customerno">custno</string>
+    <string name="cust_no">custNo</string>
     <string name="Account_details_path">accountService</string>
 
     <!-- TODO: Remove or change this placeholder text -->
