Profile Management with Date Picker #43

--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="tvtransferDetails">Transfer Details</string>
     <string name="btnCancel">CANCEL</string>
     <string name="transferFunds_VO">transferFundsVO</string>
-
+    <string name="btnConfirm">Confirm</string>
 
     <!--For Forgot Password -->
     <string name="etForgotPass_AccountNumber">Enter your Account Number</string>
