--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="remember_me">Remember Me</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -12,14 +11,13 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
-    <string name="title_activity_user_login">Sign in</string>
     <string name="default_path">/rest/</string>
     <string name="no_network">No network connection</string>
 
     <!--Following strings are for Login-->
 
     <string name="prompt_server_addr">Enter Server Address</string>
-    <string name="account_lockout_duration">10</string>
+    <string name="account_lockout_duration">1</string>
     <string name="title_activity_home_page">HomePage</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -28,7 +26,6 @@
     <string name="login_successful">Login Successful</string>
     <string name="menu_change_url">Change Server Address</string>
     <string name="forgot_password">Forgot Password?</string>
-    <string name="action_settings">Settings</string>
     <string name="action_logout">Log out</string>
     <string name="username">username</string>
     <string name="password">password</string>
@@ -85,11 +82,11 @@
     <!--For Transfer Funds Activity-->
     <string name="tvTransfer_fromAccountNo">Your Account No</string>
     <string name="tvTransfer_fromCustNo">Your Customer No</string>
-    <string name="tvTransfer_toAccountNo">Recepient Account No</string>
-    <string name="tvTransfer_toCustNo">Recepient Customer No</string>
-    <string name="tvtransferAmount">Transfer Amount</string>
-    <string name="tvtransferDetails">Transfer Details</string>
-    <string name="btnCancel">CANCEL</string>
+    <string name="tvTransfer_toAccountNo">Recipient Account No</string>
+    <string name="tvTransfer_toCustNo">Recipient Customer No</string>
+    <string name="tvTransferAmount">Transfer Amount</string>
+    <string name="tvTransferDetails">Transfer Details</string>
+    <string name="btnCancel">Cancel</string>
     <string name="transferFunds_VO">transferFundsVO</string>
     <string name="btnConfirm">Confirm</string>
     <string name="transfer_successful"> Transfer successful</string>
@@ -103,7 +100,7 @@
 
     <!--For Change Password -->
     <string name="etChangePassword_newPassword">Enter your new password</string>
-    <string name="etChangePassword_confirmPassword">Confirm new passsword</string>
+    <string name="etChangePassword_confirmPassword">Confirm new password</string>
     <string name="error_username_does_not_exist">Username does not exist</string>
     <string name="password_not_changed">Password was not changed</string>
     <string name="password_changed">Password Changed to </string>
