--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -113,4 +113,15 @@
     <string name="btnTransfer_Transfer">TRANSFER</string>
     <string name="title_activity_transfer">TransferActivity</string>
 
+    <!--For Activity History Fragment-->
+    <string name="tvActivityHistory_AccountNo">Enter Account No</string>
+    <string name="btnSubmit">Submit</string>
+
+    <!--For Transaction List item-->
+    <string name="tvActivityHistory_Description">Description</string>
+    <string name="tvActivityHistory_Date">Date</string>
+    <string name="tvActivityHistory_afterAmount">After amount</string>
+    <string name="tvActivityHistory_TransactionAmount">Transaction Amount</string>
+
+
 </resources>
