--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
 
     <!--Following strings are for Connectivity-->
     <string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
-    <!--<string name="default_address">http://10.0.0.3:8090/InsecurePayServiceServer</string>-->
+    <!--<string name="default_address">http://149.161.139.39:8090/InsecurePayServiceServer</string>-->
     <string name="login_path">login</string>
     <string name="forgot_password_path">forgotPassword</string>
     <string name="cust_details_path">custService</string>
@@ -47,6 +47,8 @@
     <string name="account_details_path">accountService</string>
     <string name="transfer_funds_path">transferFunds</string>
     <string name="transfer_validation_path">transferValidation</string>
+    <string name="accountno_validation_path">accountNumberValidation</string>
+    <string name="activity_history_path">activityHistory</string>
 
     <!--For Navigation Drawer Toolbar titles-->
     <string name="nav_homepage">Home</string>
@@ -116,6 +118,7 @@
     <!--For Activity History Fragment-->
     <string name="tvActivityHistory_AccountNo">Enter Account No</string>
     <string name="btnSubmit">Submit</string>
+    <string name="account_no">accountNo</string>
 
     <!--For Transaction List item-->
     <string name="tvActivityHistory_Description">Description</string>
