--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -83,8 +83,9 @@
     <string name="account_update_failed">Update failed</string>
     <string name="btnAccount_update">Update</string>
     <string name="btnAccount_change_password">Change Password</string>
-    <string name="etAccount_phone_hint">0000000000</string>
+    <string name="etAccount_phone_hint">0123456789</string>
     <string name="accountZipError">Minimum length of zip should be 5</string>
+    <string name="accountPhoneError">Minimum length of phone number should be 10</string>
     <string name="accountFixBeforeUpdate">Please resolve the errors first</string>
 
     <!--For Transfer Funds Activity-->
