--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -38,8 +38,8 @@
     <string name="common_VO">commonVO</string>
 
     <!--Following strings are for Connectivity-->
-    <string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
-    <!--<string name="default_address">http://10.0.0.3:8090/InsecurePayServiceServer</string>-->
+    <!--<string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>-->
+    <string name="default_address">http://10.0.0.3:8090/InsecurePayServiceServer</string>
     <string name="login_path">login</string>
     <string name="forgot_password_path">forgotPassword</string>
     <string name="cust_details_path">custService</string>
@@ -120,6 +120,9 @@
     <string name="tvActivityHistory_AccountNo">Enter Account No</string>
     <string name="btnSubmit">Submit</string>
     <string name="account_no">accountNo</string>
+
+    <!--For Chat Fragment-->
+    <string name="chat_upload_successful">File Upload successful</string>
 
     <!--For Transaction List item-->
     <string name="tvActivityHistory_Description">Description</string>
