--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -38,8 +38,8 @@
     <string name="common_VO">commonVO</string>
 
     <!--Following strings are for Connectivity-->
-    <string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
-    <!--<string name="default_address">http://10.0.0.3:8090/InsecurePayServiceServer</string>-->
+    <!--<string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>-->
+    <string name="default_address">http://192.168.1.106:8080/InsecurePayServiceServer</string>
     <string name="login_path">login</string>
     <string name="forgot_password_path">forgotPassword</string>
     <string name="cust_details_path">custService</string>
@@ -49,6 +49,7 @@
     <string name="transfer_validation_path">transferValidation</string>
     <string name="accountno_validation_path">accountNumberValidation</string>
     <string name="activity_history_path">activityHistory</string>
+    <string name="chatFileUploadPath">chatFileUpload</string>
     <string name="logout_path">logout</string>
 
     <!--For Navigation Drawer Toolbar titles-->
