--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -123,7 +123,8 @@
     <string name="account_no">accountNo</string>
 
     <!--For Chat Fragment-->
-    <string name="chat_upload_successful">File Upload successful</string>
+    <string name="chatUploadSuccess">File upload successful</string>
+    <string name="chatUploadFailure">File upload failed</string>
 
     <!--For Transaction List item-->
     <string name="tvActivityHistory_Description">Description</string>
