--- a/InsecurePayAndroid/app/src/main/res/values/strings.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <!--For Chat Fragment-->
     <string name="chatUploadSuccess">File upload successful</string>
     <string name="chatUploadFailure">File upload failed</string>
-
+    <string name="chatThankyou">Thank you for your message</string>
     <!--For Transaction List item-->
     <string name="tvActivityHistory_Description">Description</string>
     <string name="tvActivityHistory_Date">Date</string>
